--- a/src/css/style.css
+++ b/src/css/style.css
@@ -382,6 +382,10 @@ table {
   font-weight: normal;
   font-style: normal;
 }
+* {
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -417,4 +421,48 @@ table {
 }
 .nav-menu__list-item:last-child {
   margin-right: 0;
+}
+
+.left-wrapper {
+  position: relative;
+}
+.left-wrapper img {
+  position: relative;
+  z-index: 5;
+}
+.left-wrapper__rectangle-blue {
+  position: absolute;
+  top: 150px;
+  left: -50px;
+  z-index: 2;
+  width: 565.949px;
+  height: 220px;
+  transform: rotate(-64.003deg);
+  border-radius: 100px;
+  background: #5290EA;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.left-wrapper__rectangle-orange {
+  position: absolute;
+  top: 160px;
+  left: -30px;
+  z-index: 4;
+  width: 618.428px;
+  height: 220px;
+  transform: rotate(-50.806deg);
+  border-radius: 100px;
+  background: #F28B64;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.left-wrapper__rectangle-grey {
+  position: absolute;
+  top: 200px;
+  left: 10px;
+  z-index: 3;
+  width: 608.968px;
+  height: 220px;
+  transform: rotate(-36.15deg);
+  border-radius: 100px;
+  background: #E2E2E2;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
