--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,6 +18,10 @@
     src: url('../fonts/Montserrat Light.eot?#iefix') format('embedded-opentype') url('../fonts/MMontserrat Light.woff') format('woff') url('../fonts/Montserrat Light.ttf') format('truetype')
     font-weight: normal
     font-style: normal
+*
+    box-sizing: border-box
+
+$color-blue: #5290EA
 
 .container
     max-width: 1140px
@@ -47,3 +51,42 @@
         font-weight: 600
         &:last-child
             margin-right: 0
+
+.left-wrapper
+    position: relative
+    img
+        position: relative
+        z-index: 5
+    &__rectangle-blue
+        position: absolute
+        top: 150px
+        left: -50px
+        z-index: 2
+        width: 565.949px
+        height: 220px
+        transform: rotate(-64.003deg)
+        border-radius: 100px
+        background: $color-blue
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
+    &__rectangle-orange
+        position: absolute
+        top: 160px
+        left: -30px
+        z-index: 4
+        width: 618.428px
+        height: 220px
+        transform: rotate(-50.806deg)
+        border-radius: 100px
+        background: #F28B64
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
+    &__rectangle-grey
+        position: absolute
+        top: 200px
+        left: 10px
+        z-index: 3
+        width: 608.968px
+        height: 220px
+        transform: rotate(-36.15deg)
+        border-radius: 100px
+        background: #E2E2E2
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
