--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -22,6 +22,7 @@
     box-sizing: border-box
 
 $color-blue: #5290EA
+$color-orange: #F28B64
 
 .container
     max-width: 1140px
@@ -40,6 +41,9 @@ $color-blue: #5290EA
         display: block
         width: 134px
         height: 69px
+    &__content-container
+        display: flex
+        position: relative
 .nav-menu
     &__list
         display: flex
@@ -90,3 +94,61 @@ $color-blue: #5290EA
         border-radius: 100px
         background: #E2E2E2
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
+.right-wrapper
+    width: 372px
+    position: absolute
+    top: 150px
+    right: 76px
+    &__icons-box
+        margin-bottom: 1px
+        padding-left: 10px
+    &__title
+        margin-bottom: 5px
+    &__text
+        font-size: 16px
+        margin-bottom: 20px
+
+.icons
+    display: inline-flex
+    &__item
+        display: flex
+        justify-content: center
+        align-items: center
+        width: 40px
+        height: 40px
+        border: 1px solid $color-blue
+        border-radius: 100px
+        margin-right: 17px
+        &:last-child
+            margin-right: 0px
+        i
+            font-size: 21px
+.title
+    font-size: 72px
+    position: relative
+    &__hr
+        width: 65px
+        position: absolute
+        bottom: 0
+        margin: 0
+        border: none
+        border-top: 1px solid black
+.buttons
+    display: inline-flex
+    &__main-btn
+        margin-right: 32px
+        width: 200px
+        height: 60px
+        border-radius: 100px
+        background: $color-orange
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)
+        border: 0
+        font-size: 18px
+        color: white
+    &__icon-btn
+        display: inline-flex
+        align-items: center
+        img
+            margin-right: 12px
+    &__text
+        font-size: 16px
